--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
 {
-  "main": "./krestik/script.js",
-  "scripts" : {"build": "node ./krestik/script.js"}
+  "main": "./script.js",
+  "scripts" : {"build": "node ./script.js"}
 }
