--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,9 +4,8 @@ on:
  push:
    branches: ["main"]
    
-iobs:
+jobs:
  my_build_job:
- 
   run-on: ubunt-latest
   steps:
    -uses: actions/checkout@v3
@@ -14,13 +13,5 @@ iobs:
      run:|
      npm install
      npm run build
-   -name: Run a one-line script
-     run: echo Hello, world!
      
-   -name: Run a multi-line script
-     run: | 
-       echo Add other actions to build,
-       echo test, and deploy your project
-     
-   -name: Run JS file for test
-    run: node script.js
+  
