--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,6 +23,6 @@ jobs:
      echo test? and deploy your project
     
    -name: Run JS file for test
-    run: node script.js
+    run: node /script.js
      
   
