--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-Name:CD_PRO
+Name:CI
 
 on:
  push:
@@ -16,6 +16,9 @@ jobs:
      run:|
      npm install
      npm run build
+     
+   -name: Run a one-line script
+    run: echo Hello, world!
    
    -name: Run a multi-line script
      run:| 
