--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,21 +1,21 @@
-Name:CI
+name:CI
 
 on:
  push:
-   branches: ["main"]
+  branches: ["main"]
  pull_request:
-   branches: ["main"]
+  branches: ["main"]
    
 jobs:
  my_build_job:
-  run-on: ubunt-latest
+  run-on: ubuntu-latest
   steps:
    -uses: actions/checkout@v3
-   
+
    -name: npm install, test and build
-     run:|
-     npm install
-     npm run build
+    run:|
+       npm run test
+       npm run build
      
    -name: Run a one-line script
     run: echo Hello, world!
