--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,7 @@ jobs:
 
    -name: npm install, test and build
     run:|
-       npm run test
+       npm run install
        npm run build
      
    -name: Run a one-line script
