--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,8 +18,7 @@ jobs:
        npm run build
      
    -name: Run a one-line script
-    run: 
-      echo Hello, world!
+    run: echo Hello, world!
    
    -name: Run a multi-line script
      run:| 
