--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,8 +22,8 @@ jobs:
    
    - name: Run a multi-line script
      run: | 
-         echo Add other action to build
-         echo test? and deploy your project
+         echo Add other action to build,
+         echo test, and deploy your project.
     
    - name: Run JS file for test
      run: node js/script.js
