--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,8 +7,7 @@ on:
   branches: ["main"]
    
 jobs:
- my_build_job:
- 
+ my_build_CI:
   run-on: ubuntu-latest
   steps:
    - uses: actions/checkout@v3
