--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,12 +1,13 @@
 name: CI
 
-on: push:
-  branches: ["main"]
+on: 
+ push:
+  branches: [ "main" ]
  pull_request:
-  branches: ["main"]
+  branches: [ "main" ]
    
 jobs:
- my_build_uses:
+ my_build_job:
   run-on: ubuntu-latest
   steps:
    - uses: actions/checkout@v3
