--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,14 +1,14 @@
 name: CI
 
 on: 
- push:
-  branches: [ "main" ]
- pull_request:
-  branches: [ "main" ]
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
    
 jobs:
  my_build_job:
-  run-on: ubuntu-latest
+  runs-on: ubuntu-latest
   steps:
    - uses: actions/checkout@v3
 
