--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
 {
-  "main": "./script.js",
-  "scripts" : {"build": "node .js/script.js"}
+  "main": "script.js",
+  "scripts" : {"build": "node script.js"}
 }
